<resources>
    <string name="app_name">DriverPhone</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="start_camera">Start Camera</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">something@provider.com</string>
    <string name="hint_password">********</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered email address to sent you password reset instructions.</string>
    <string name="prompt_password">password</string>
    <string name="Sensors">Sensors</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="navigation_detect">Detektálás</string>
    <string name="navigation_record">Felvétel</string>
    <string name="navigation_profile">Profil</string>
    <string name="logging_in">Logging in...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="record">Record!</string>
    <string name="description_info">Record start</string>
    <string name="intro_message">Record started</string>
    <string name="permission_request">Permisson request</string>
    <string name="camera_error">Camera error</string>
    <string name="stop">Stop</string>
    <string name="ftp_upload">FTP Upload</string>
    <string name="neural_network_path">Neural network path:</string>
    <string name="new_neural_network_path">New path:</string>
    <string name="new_neural_network_path_old">Old path:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="download_new_model">Download new model</string>
</resources>