<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_detect"
        android:enabled="true"
        android:icon="@drawable/ic_filter_center_focus_black_24dp"
        android:title="@string/navigation_detect"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_record"
        android:enabled="true"
        android:icon="@drawable/ic_videocam_black_24dp"
        android:title="@string/navigation_record"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_pin_black_24dp"
        android:title="@string/navigation_profile"
        app:showAsAction="ifRoom" />
</menu>