<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="@dimen/standard_padding"
            android:text="@string/new_neural_network_path_old"
            android:textSize="@dimen/Large_text" />

        <TextView
            android:id="@+id/new_neural_network_path_old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            android:textSize="@dimen/Large_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/standard_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            android:text="@string/new_neural_network_path"
            android:textSize="@dimen/Large_text" />

        <EditText
            android:id="@+id/new_neural_network_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            android:textSize="@dimen/Large_text" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="(http://....)"
        android:textSize="@dimen/Large_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/standard_padding">

        <Button
            android:id="@+id/dialog_server_ip_address_positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="@dimen/Large_text" />

        <Button
            android:id="@+id/dialog_server_ip_address_negativ_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="@dimen/Large_text" />


    </LinearLayout>


</LinearLayout>